--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ h1{text-align:center;font-size:2.6rem;font-weight:800;background:linear-gradient
 </div>
 
 <div class="details">
-  <div class="card">📅 1 Feb 2026</div>
+  <div class="card">📅 POSTPONED</div>
   <div class="card">⏰ 4:30 PM</div>
   <div class="card">📍 Riders Home</div>
   <div class="card">🎟 Free Entry</div>
