--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@ h1{text-align:center;font-size:2.6rem;font-weight:800;background:linear-gradient
 </head>
 <body>
 <div class="container">
-<h1>Friendly Match</h1>
+<h1>IBN VICTORY MOCK NATIONS TOURNAMENT</h1>
+  <h1>QUATER FINALS</h1>
 
 <div class="teams">
   <div class="team">
@@ -39,15 +40,15 @@ h1{text-align:center;font-size:2.6rem;font-weight:800;background:linear-gradient
   </div>
   <div class="vs">VS</div>
   <div class="team">
-    <img src="jawab.jpeg" />
-    <h2>Jawab Academy</h2>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmj1Evk5tn4Cs8wg7JGypWQsNCMjRMPghZig&s" />
+    <h2>Luke Sport FC</h2>
   </div>
 </div>
 
 <div class="details">
-  <div class="card">📅 POSTPONED</div>
-  <div class="card">⏰ 4:30 PM</div>
-  <div class="card">📍 Riders Home</div>
+  <div class="card">📅 Feb 6 2026</div>
+  <div class="card">⏰ 3:00 PM</div>
+  <div class="card">📍 GSS Suleja Field</div>
   <div class="card">🎟 Free Entry</div>
   <div class="card">🎟 Powered by MathCloud Web Services +2348102341648(WhatsApp)</div>
 </div>
@@ -104,7 +105,7 @@ function drawClock(sec){
 }
 
 // ================= KICKOFF COUNTDOWN =================
-const kickoff = new Date(2026,1,1,16,30,0).getTime();
+const kickoff = new Date(2026,2,6,15,00,0).getTime();
 setInterval(()=>{
   const diff = kickoff - Date.now();
   if(diff <= 0){
